Another white space issue fixed (hopefully)

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ section{
     align-items: center;
     flex-direction: column;
     z-index: 0;
+    overflow: hidden;
 }
 
 #home-section h1 {
@@ -96,7 +97,7 @@ section{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    overflow: hidden; /* This will fix the horizontal overflow */
+    overflow: hidden;
 }
 
 #about-section #text{
@@ -580,13 +581,13 @@ img{
         flex-direction: column;
         align-items: center;
     }
+
+    #kirby-container {
+        top: 70%;
+    }
 }
 
 @media (max-width: 768px) {
-    #kirby-container {
-        top: 60%;
-    }
-
     .project-card {
         flex-direction: column;
         align-items: center;
